courses/430_programming-languages/assignment-6/tests/error/hw4_error21.correct
assignment requires matching types, found 'bool' and 'none'
